--- a/index.html
+++ b/index.html
@@ -2,16 +2,20 @@
 <html>
 <head>
 	<title>Grafitti by Andrew Dodson</title>
-	<link rel="stylesheet" href="assets/icons/style.css"/>
+
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no"/> 
 	<!-- use the latest IE browser always, and optionally use chrome frame if installed -->
 	<meta http-equiv="x-ua-compatible" content="IE=edge,chrome=1" />
 
+	<!-- App specific assets -->
+	<link rel="stylesheet" href="assets/icons/style.css"/>
+	<link rel="stylesheet" href="assets/style.css" />
 	<script src="assets/exif.js"></script>
 	<script src="assets/binaryajax.js"></script>
 	<script src="assets/toBlob.js"></script>
 
-	<link rel="stylesheet" href="assets/style.css" />
+	<!-- Track -->
+	<script src="/_packages/track.js"></script>
 </head>
 <body>
 	<canvas>
