--- a/index.html
+++ b/index.html
@@ -42,6 +42,8 @@
 			<button class="icon-picture" onclick="download()">&nbsp; Download to computer</button>
 			<button class="icon-picture" onclick="pickSkyDriveAlbumToSave()">&nbsp; Upload to SkyDrive</button>
 		</section>
+
+		<!-- Sections for Social tools, interoperate with SkyDrive -->
 		<section id="albums" hidden>
 			<p>Select an album to store your image</p>
 			<p id="figs"></p>
